<resources>
    <string name="app_name">APOTEK BISA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tambah_transaksi">Tambah Transaksi</string>
    <string name="nama_pelanggan">Nama Obat</string>
    <string name="pilihan_paket">Jenis Obat :</string>
    <string name="jenis_obat1">Kapsul</string>
    <string name="jenis_obat2"><![CDATA[Syrup]]></string>
    <string name="beard_trim">Beard Trim</string>
    <string name="jenis_obat3">Tablet</string>
    <string name="jumlah_uang">Jumlah uang</string>
    <string name="nama_penyukur">Nama penyukur</string>
    <string name="proses_transaksi">Proses transaksi</string>
    <string name="total_bayar">Total bayar</string>
    <string name="total_harga">Total harga</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="null_field">%1$s wajib diisi!</string>
    <string name="uang_kurang">Uang anda kurang!</string>
    <string name="konfirmasi_transaksi">Konfirmasi Transaksi</string>
    <string name="kembalian">Kembalian</string>
    <string name="submit_transaksi">Submit transaksi</string>
    <string name="reset">reset</string>
    <string name="jumat_27_maret_2020">Jumat, 27 Maret 2020</string>
    <string name="azmi">Paracetamol</string>
    <string name="paket">Kapsul</string>
    <string name="delete_confirmation">Yakin ingin menghapus data transaksi?</string>
    <string name="delete_all_confirmation">Yakin ingin menghapus semua data transaksi?</string>
    <string name="yes">Ya</string>
    <string name="no">Batal</string>
    <string name="success_delete">Data transaksi berhasil dihapus!</string>
    <string name="success_update">"Berhasil update transaksi!</string>
    <string name="success_insert">"Berhasil tambah transaksi!</string>
    <string name="edit_transaksi">Edit Transaksi</string>
    <string name="update_transaksi">Update Transaksi</string>
    <string name="alamat">Alamat : Balongbendo Rt.07 Rw.01</string>
    <string name="muhammad_yusuf_ardiansyah">: Muhammad Yusuf Ardiansyah</string>
    <string name="nama">Nama : Muhammad Yusuf Ardiansyah</string>
    <string name="ttl">TTL : Sidoarjo, 28 Juli 2000</string>
    <string name="balongbendo_rt_07_rw_01">: Balongbendo Rt.07 Rw.01</string>
    <string name="sidoarjo_28_juli_2000">: Sidoarjo, 28 Juli 2000</string>
    <string name="hobi">Hobi : Mendaki Gunung dan Bermain Game</string>
    <string name="mendaki_gunung_dan_bermain_game">: Mendaki Gunung dan Bermain Game</string>
    <string name="pekerjaan">Pekerjaan : Mahasiswa UPN "Veteran" Jatim</string>
    <string name="mahasiswa_upn_veteran_jatim">: Mahasiswa UPN VeteranJatim</string>
    <string name="todo">TODO</string>
    <string name="profil">PROFIL DEVELOPER</string>
</resources>
