<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="353dp"
        android:layout_height="85dp"
        android:layout_marginEnd="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hero" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="401dp"
        android:layout_height="182dp"
        android:layout_marginTop="245dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:srcCompat="@drawable/button_radius" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:backgroundTint="#283636"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="267dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="15dp"
            android:text="@string/profil"
            android:textColor="#FFFFFF"
            android:textSize="14pt" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="165dp"
            android:layout_height="130dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo"
            tools:srcCompat="@drawable/foto" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/nama"
            android:textColor="#090707"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/ttl"
            android:textColor="#090707"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/alamat"
            android:textColor="#090707"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/pekerjaan"
            android:textColor="#090707"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/hobi"
            android:textColor="#090707"
            android:textSize="8pt" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>